--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "mdbreact": "^4.25.3",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
