--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-date-picker": "^5.1.0",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-router-bootstrap": "^0.25.0",
