--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "3.4.0",
     "universal-cookie": "^4.0.3"
   },
