--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-cookie": "^4.0.3",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^5.1.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-s-alert": "^1.4.1",
