--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-date-picker": "^5.1.0",
+    "react-confirm-alert": "^2.6.1",
     "react-cookie": "^4.0.3",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
